--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Résumé</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     ― Hello World! &#x1F609;
@@ -38,7 +38,7 @@
                   class="contact-info__avatar"
                   src="assets/avatar.png"
                   alt="Avatar"
-                />
+                >
               </div>
 
               <div class="contact-info__block">
